--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.mjs"
-
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +12,6 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.11.3",
     "@grpc/proto-loader": "^0.7.13",
-    "express": "^4.21.0"
+    "@grpc/reflection": "^1.0.4"
   }
 }
